# lumina

./: .gitignore  README.md  lumina.sh  pyproject.toml  run.py
lumina/: __init__.py  config.py
lumina.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lumina/core/: __init__.py  pipeline.py  realesrgan_pure.py
lumina/models/: __init__.py  manager.py
lumina/ui/: __init__.py  app.py
