[project]
name = "lumina"
version = "0.1.0"
description = "AI-powered photo & video enhancement tool — 100% local"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lumina Team"},
]

dependencies = [
    "gradio>=5.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.24",
    "Pillow>=10.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "requests>=2.28",
    "basicsr>=1.4",
    "realesrgan>=0.3",
    "facexlib>=0.3",
    "gfpgan>=1.3",
]

[project.optional-dependencies]
gpu = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
lumina = "run:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]
