[project]
name = "lumina"
version = "0.1.0"
description = "AI-powered photo & video enhancement tool - 100% local"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lumina Team"},
]

dependencies = [
    "gradio>=5.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.24",
    "Pillow>=10.0",
    "requests>=2.28",
]

[project.optional-dependencies]
full = [
    "torch>=2.0",
    "torchvision>=0.15",
    "basicsr>=1.4",
    "realesrgan>=0.3",
]
dev = [
    "pytest>=7.0",
]

[tool.black]
line-length = 100
